# GeoMod

./: .gitignore  CMakeLists.txt  GeoMod.hpp  README.md  main.cpp  todo.list
FilesFromLi/: Cell1_2000Facet_2D_01.inp  Cell1_GFP_01.smooth.stl  Info_From_Li.txt  gel.vtk  gelRemesh_20more.vtk
aux/: config.sh  config_template.sh  setup.sh
src/: CMakeLists.txt  GeoMod.cpp  GeoMod.hpp  GeoMod_SIM.hpp  GeoMod_Tests.cpp  GeoMod_Tests.hpp  GeoMod_coords.cpp  GeoMod_coords.hpp  GeoMod_gmd_t.cpp  GeoMod_gmd_t.hpp  GeoMod_mesh_helper.cpp  GeoMod_mesh_helper.hpp  GeoMod_model_helper.cpp  GeoMod_model_helper.hpp  GeoMod_old.hpp  GeoMod_printer.cpp  GeoMod_printer.hpp  GeoMod_util.cpp  GeoMod_util.hpp  main.cpp  main_tests.cpp
src/old/: GeoMod_old.cpp  density_test.cpp  density_test.hpp  main_old.cpp  make_a_copy.cpp
write_up/: GeoMod.tex
